# gea

./: .gitignore  CMakeLists.txt  configure.bat  make.bat  narrativa.txt  run.bat
include/: print.h
include/sol/: config.hpp  forward.hpp  sol.hpp
src/: Game.cpp  Pong.cpp  Pong.h  main.cpp
src/ECS/: Components.h  Entity.h  System.h
src/Game/: Game.cpp  Game.h
src/Game/Graphics/: PixelShader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tile.h
src/Pong/: Components.h  Pong.cpp  Pong.h  Systems.cpp  Systems.h
src/Scene/: Scene.cpp  Scene.h
